# Stocker

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  stocker_launcher.py
.github/workflows/: ci.yml
apps/desktop/: README.md
apps/desktop/notebooks/: 001_data_audit.ipynb  002_baseline_research.ipynb
apps/desktop/scripts/: run_lab.py
apps/server/: README.md
apps/server/scripts/: run_executor.py
configs/: research.example.yaml  server.example.yaml
data/: README.md
data/reports/research/stage4_5_intraday_robustness_gates/: reclassified_opening_range_results.csv  summary.json  (+2 more)
docs/: architecture.md  data_pipeline.md  execution_safety.md  intraday_features.md  research_harness.md  research_process.md  universes.md
docs/adr/: 0001-monorepo-split.md  0002-python-uv.md
docs/vendors/: eodhd.md
research/hypotheses/examples/: mean_reversion_after_large_down_day.yaml  moving_average_momentum.yaml  pullback_in_uptrend.yaml  volatility_breakout.yaml
research/hypotheses/intraday_examples/: mean_reversion_after_large_down_bar_intraday_session_flat.yaml  moving_average_momentum_intraday_session_flat.yaml  opening_range_breakout_intraday_session_flat.yaml  pullback_in_uptrend_intraday_session_flat.yaml  volatility_breakout_intraday_session_flat.yaml  vwap_reclaim_rejection_intraday_session_flat.yaml  vwap_reclaim_v2_intraday_session_flat.yaml
scripts/: bootstrap_mac.sh  bootstrap_server.sh  check.sh  format.sh  reclassify_opening_range_robustness_gates.py  research_smoke_local.sh  smoke_eodhd_local.sh  test.sh
tests/: test_ci_smoke.py  test_config.py  test_costs.py  test_data_pipeline.py  test_eodhd_vendor.py  test_imports.py  test_intraday_features.py  test_intraday_session_integrity.py  test_logging.py  test_opening_range_template.py  test_research_baseline.py  test_research_benchmarks.py  test_research_direction_integration.py  test_research_harness.py  test_research_holding_policy.py  test_research_leakage_integration.py  test_research_null_models.py  test_research_position_policy.py  test_research_robustness.py  test_research_selection.py  test_research_window_context.py  test_risk.py  test_stage3_6_failure_anatomy.py  test_stage3_universe_research.py  test_storage.py  test_universe.py  test_validation_calendar.py  test_vwap_quality.py  test_vwap_template.py
tests/fixtures/eodhd/: bad_schema_response.json  eod_aapl_sample.json  intraday_aapl_1m_sample.json
tests/fixtures/market_data/: bad_ohlc.csv  clean_ohlcv.csv  duplicate_timestamp.csv  missing_gap.csv  timezone_naive.csv
universes/manual/: uk_test_5.yaml  us_test_5.yaml
